# webvtt_loc

./: .gitignore  preprocess_webvtt.py  process_webvtt.py  pyproject.toml  readme.md  requirements.txt  webvtt-loc.pyproj  webvtt_loc.pyproj
.github/workflows/: python-app.yml
helpers/: logging.py  postprocess.py  preprocess.py  sanitize_text.py
helpers/tests/: test_postprocess.py  test_preprocess.py
tests/: sample1.webvtt  sample2.webvtt  sample3.webvtt  test_preprocess_webvtt.py  test_process_webvtt.py
